
        * Fix initial value of the spinner on the first mouse move.

2013-03-04  Jaeun Choi

        * Fix elm_index to send a signal to the selected item in smart theme.

2013-03-04  WooHyun Jung

        * Focus highlight should not be showed on (0, 0).

2013-03-04  Junki Cho

        * Improved gengrid item append performance.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't set size hint when keypad on.

2013-03-05  Jaehwan Kim

        * Add edje_object_message_signal_process before edje_object_size_min_restricted_calc.
        If the min size is changed by edje signal in edc, the the function should be called before the calculation.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't change indicator mode when create.

2013-03-06  ChunEon Park (Hermet)

        * Add elm_object_item_signal_callback_add(), elm_object_item_signal_callback_del().

2013-03-07  Jaehwan Kim

        * Add the config ELM_THUMBSCROLL_HOLD_THRESHOLD.
        This is the number of pixels the range which can be scrolled, while the scroller is holed.

2013-03-07  ChunEon Park (Hermet)

        * Add elm_naviframe_item_pop_cb_set().
        * Naviframe works for H/W backkey event.

2013-03-08  WooHyun Jung

        * Add elm_widget_newest_focus_order_get for knowing the last object(and its focus order) which got focus.
        * After elm_win is created, if there is no manual focus setting, only elm_win should get focus when focus state is changed.

2013-03-08  Jaehwan Kim

        * Fix the toolbar cannot be unselected when it's mode is ELM_OBJECT_SELECT_MODE_ALWAYS.

2013-03-08  ChunEon Park (Hermet)

        * Remove the back button callback if the button is unset on the naviframe.

2013-03-11  WooHyun Jung

        * Fixed a bug that naviframe's focus_next didn't work after changing evenry item to elm_layout.
        * Naviframe is now supproting focus_direction.

2013-03-11  Tom Hacohen (TAsn)

        * Entry: Fixed a bug with text appending.
